--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lección 2, Ejercicio 1</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <!-- se usa para crear la cabezera de la web-->
@@ -22,7 +23,7 @@
         <article>
           <p>aaa</p>
         </article>
-    </section>
+     </section>
      <h1>titulo grande</h1>
      <p> parrafo</p>
      
@@ -35,5 +36,6 @@
     <footer>
         pie de página
     </footer>
+    <img src="assets/all.might.png" alt="" srcset="">
 </body>
 </html>
