cambio parametros imagen realizado

--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
     <footer>
         pie de página
     </footer>
-    <img src="assets/all.might.png" alt="" srcset="">
-</body>
+   <center><img src="assets/all.might.png" alt="" srcset="">
+</body></center>
 </html>
