ejercicio de la lección 4 finalizado

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-     <title>Lección 2, Ejercicio 1</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <title>Lección 2, Ejercicio 1</title>
 
 </head>
 
-<body>
+<body style="background-color: lightblue;">
 
-    <nav class="navbar navbar-expand-lg bg-primary mb-5" data-bs-theme="dark">
+
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Lección 3</a>
+            <a class="navbar-brand" href="#"><b>Lección 4</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,32 +25,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#"> <b>Home</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
+                        <a class="nav-link" href="https://pfampuerogonzalez-cloud.github.io/Mi-portfolio/"><b>Portfolio</b></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="https://pfampuerogonzalez-cloud.github.io/CalculadoraRM/"><b>Calculadora RM</b></a>
                     </li>
+                   
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
@@ -56,10 +42,63 @@
             </div>
         </div>
     </nav>
-    
-   
 
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+    <div class="container"></div>
+    <!-- se usa para crear la cabezera de la web-->
+    <header class="p-5 my-4 bg-light rounded-3">
+        <div class="container-fluid">
+            <!-- se usa para crear titulo grande-->
+
+            <h1 class="display-5 fw-bold text-danger">Jumbotron/Hero</h1>
+        </div>
+
+        <!-- se usa para crear un texto de parrafo-->
+        <p> <b>es un componente destacado de diseño de interfaz, situado generalmente en la parte superior, que utiliza un banner grande para captar la atención de los usuarios</b></p>
+
+    </header>
+
+    <!--se usa para crear una sección-->
+    <section>
+        <!-- se usa para crear un titulo mas pequeño que el h1-->
+        <h2 class="text-danger"> <b>Sección</b></h2>
+        <p>aaaaa </p>
+        <!-- se usa para  crear el inicio de un articulo-->
+        <article>
+            <p>aaa</p>
+        </article>
+    </section>
+    <h1 class="text-danger"> <b>Titulo grande</b></h1>
+    <p> parrafo</p>
+
+    <!-- se usa para agregar un texto a un costado-->
+    <aside>
+        al costado
+    </aside>
+    <!-- se usa para crear para poner un texto al pie de página-->
+    <footer>
+        pie de página
+    </footer>
+
+    <div class="container" text-center>
+
+        <img src="assets/img/all.might.png" width="400px" height="300px" alt="responsive image">
+
+    </div>
+    </div>
+
+    <button type="button" class="btn btn-success">Check</button>
+
+    <div class="alert alert-info" role="alert">
+  Alerta agregada con exito, lección 4, finalizada!
+</div>
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+        crossorigin="anonymous"></script>
 
 </body>
 
