hice el cambio de la línea 83 despues del add, solo por eso volvi a hacer el commit, ahora si ya estaría corregido de la lección N3 y listo los ejercicios de la Lección N4

--- a/index.html
+++ b/index.html
@@ -80,13 +80,12 @@
         pie de página
     </footer>
 
-    <div class="container" text-center>
+    <div class="container text-center">
 
         <img src="assets/img/all.might.png" width="400px" height="300px" alt="responsive image">
 
     </div>
     
-
     <button type="button" class="btn btn-success">Check</button>
 
     <div class="alert alert-info" role="alert">
